<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="10dp"
    android:padding="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:layout_margin="8dp">

        <LinearLayout
            android:id="@+id/Username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            tools:ignore="RelativeOverlap">

            <TextView
                android:id="@+id/customer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customer1"
                android:fontFamily="@font/cairo"
                android:textColor="@color/md_theme_light_primary"
                android:textSize="15sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_round_arrow_right_alt_24"
                android:layout_marginHorizontal="5dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:contentDescription="@string/arrow_icon" />

            <TextView
                android:id="@+id/customer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customer2"
                android:fontFamily="@font/cairo"
                android:textColor="@color/md_theme_light_primary"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Username"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:fontFamily="@font/cairo"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp">

            <TextView
                android:id="@+id/rs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairo"
                android:text="@string/rs"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairo"
                android:text="@string/balance"
                android:textColor="@color/md_theme_light_primary"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/egp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairo"
                android:text="@string/egp"
                android:textSize="13sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/transaction_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Amount"
            android:text="@string/transaction_status"
            android:textStyle="bold"
            android:fontFamily="@font/cairo"
            android:textSize="15sp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>