<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="85dp"
    android:layout_marginStart="7dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="7dp"
    android:background="#ffffff"
    android:padding="2dp"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">


        <LinearLayout
            android:id="@+id/ll_select_user_item"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/customer_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/customericon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@string/phone_number"
                    android:src="@drawable/ic_round_person_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cairo"
                    android:text="@string/customers_name"
                    android:textColor="@color/md_theme_light_primary"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="RelativeOverlap" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/cairo"
                    android:text="@string/account_balance"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/balance_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/cairo"
                    android:textAlignment="textStart"
                    android:textColor="@color/md_theme_light_primary"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="@string/balance" />

                <TextView
                    android:id="@+id/egp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/cairo"
                    android:text="@string/egp"
                    android:textSize="17sp" />
            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/delete"
            android:layout_width="34dp"
            android:layout_height="37dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/delete"
            android:src="@drawable/ic_round_delete_24" />

    </LinearLayout>
</androidx.cardview.widget.CardView>