<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/profile_pic"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="20dp"
            android:padding="20dp"
            app:cardCornerRadius="50dp"
            app:cardElevation="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:contentDescription="@string/customers_name"
                android:scaleType="centerCrop"
                android:src="@drawable/christopher_campbell_unsplash" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_pic"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:fontFamily="@font/cairo"
                android:text="@string/katie_cabrera"
                android:textColor="@color/md_theme_light_primary"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/customeremail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_name"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:fontFamily="@font/cairo"
                android:text="@string/email"
                android:textSize="15sp"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/visacard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/customeremail">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="10dp"
                android:padding="20dp"
                app:cardBackgroundColor="@color/black"
                app:cardCornerRadius="15dp"
                app:cardElevation="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:contentDescription="@string/customers_name"
                    android:scaleType="centerCrop"
                    android:src="@drawable/blue_bg" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="75dp"
                        android:layout_height="50dp"
                        android:contentDescription="@string/customers_name"
                        android:src="@drawable/visa_logo_white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.949"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.949" />

                    <TextView
                        android:id="@+id/card_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="278dp"
                        android:layout_marginBottom="173dp"
                        android:text="@string/card_number"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/balancetxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/balancetxt"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/textView2"
                        app:layout_constraintEnd_toEndOf="@+id/textView2"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/textView2"
                        app:layout_constraintTop_toBottomOf="@+id/card_number"
                        app:layout_constraintVertical_bias="0.98" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="301dp"
                        android:text="@string/balance_available"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/card_number"
                        app:layout_constraintVertical_bias="0.9" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/moreinf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/visacard"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/monumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/cairo"
                android:text="@string/mobile_number_9999_444_9999"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/SWIFTcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/cairo"
                android:text="@string/swift_bic_code"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/transfer_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/cairo"
                android:text="@string/transfer_money"
                android:textColor="#fff"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>
    </RelativeLayout>
</ScrollView>